@startuml

' This is a PlantUML file that describes a UML Class Diagram textually.
' See http://plantuml.com for more information.



class CommandLineParser << (C, red) >> {
    parseCommandLine()
}
CommandLineParser .down.> AmortizationTableParameters : << creates >>



class AmortizationTableCalculator << (C, white) >> {
    {static} main()
    calculateAndPrintAmortizationTable()
}
AmortizationTableCalculator -left-> CommandLineParser
AmortizationTableCalculator -down-> AmortizationTable
AmortizationTableCalculator -right-> AmortizationTableConsolePrinter



class AmortizationTableConsolePrinter << (C,dodgerblue) >> {
    printAmortizationTable()
}
AmortizationTableConsolePrinter -> AmortizationTableOutputPreparer
AmortizationTableConsolePrinter --> "*" AmortizationTableLine : amortizationTableLinesToPrint



class AmortizationTableOutputPreparer << (C,dodgerblue) >> {
    prepareTableLinesForOutput()
}
AmortizationTableOutputPreparer --> "*" AmortizationTableLine



class AmortizationTable << (C,limegreen) >> {
    calculateTableLines()
}
AmortizationTable -down-> "*" AmortizationTableLine



class AmortizationTableParameters << (C,limegreen) >> {
    loanAmountInEuro
    debitInterestFactor
    initialAmortizationFactor
    fixedInterestRateInYears
}



abstract class AmortizationTableLine << (A,limegreen) >> {
    date
    residualDebt
    interest
    amortization
    rate
}
AmortizationTableLine -left-> AmortizationTableParameters



abstract class SummatingAmortizationTableLine << (A,dodgerblue) >> {
}
AmortizationTableLine <|- SummatingAmortizationTableLine
SummatingAmortizationTableLine -> "*" AmortizationTableLine



class PayoutAmortizationTableLine << (C,limegreen) >> {
}
AmortizationTableLine <|-- PayoutAmortizationTableLine



class MonthlyAmortizationTableLine << (C,limegreen) >> {
}
MonthlyAmortizationTableLine -up-> "previous" AmortizationTableLine
AmortizationTableLine <|-- MonthlyAmortizationTableLine



class YearlyAmortizationTableLine << (C,dodgerblue) >> {
}
SummatingAmortizationTableLine <|-- YearlyAmortizationTableLine



class EndOfFixedInterestRateAmortizationTableLine << (C,dodgerblue) >> {
}
SummatingAmortizationTableLine <|-- EndOfFixedInterestRateAmortizationTableLine



legend left
  Color code:
  *<b>red</b>: input (CLI)
  *<b>green</b>: processing (model)
  *<b>blue</b>: output (presentation)
  *<b>white</b>: controller
endlegend

@enduml